--- a/app/Resources/views/user/user_challenge.html.twig
+++ b/app/Resources/views/user/user_challenge.html.twig
@@ -39,21 +39,23 @@
 													<p><strong>Favourite Club:</strong> {{ player.club }}.</p>
 												</div>
 												<div class="col-md-3">
-													<p><strong>Won:</strong> {{ won.won }} matches.</p>
+													<p><strong>Won:</strong> {{ won[0].won }} matches.</p>
 												</div>
 												<div class="col-md-4">
-													<p><strong>Lost:</strong> {{ lost.lost }} matches.</p>
+													<p><strong>Lost:</strong> {{ lost[0].lost }} matches.</p>
 												</div>
 											
 										</div> 
+										{% set wonPercentage = won[0].won / (won[0].won + lost[0].lost) * 100 %}
+										{% set lostPercentage = lost[0].lost / (won[0].won + lost[0].lost) * 100 %}
 										<div class="row">
 											<div class="col-md-9">
 												<div class="progress">											
-												  <div class="progress-bar progress-bar-success" style="width: 60%">
-												    60% Matches won.
+												  <div class="progress-bar progress-bar-success" style="width: {{ wonPercentage }}%">
+												    {{ wonPercentage }}% Matches won.
 												  </div>
-												  <div class="progress-bar progress-bar-danger" style="width: 40%">
-												    40% Matches lost.
+												  <div class="progress-bar progress-bar-danger" style="width: {{ lostPercentage }}%">
+												    {{ lostPercentage }}% Matches lost.
 												  </div>
 												</div>
 											</div>
